// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tourtip > renders default tourtip 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span>[39m
    [36m<span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"tourtip tourtip--expanded"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"tourtip__host"[39m
        [36m>[39m
          [36m<p>[39m
            [0mNisi quis officia cupidatat irure qui aliquip mollit aliqua dolore. Sint ut anim adipisicing
            eiusmod. Dolor irure adipisicing dolor ullamco elit irure laboris consectetur eiusmod et officia
            mollit irure. Reprehenderit nostrud proident anim deserunt aliqua proident dolore reprehenderit.
            Proident fugiat sit nostrud Lorem aliquip enim est sint. Labore esse quis nulla in Lorem aute
            duis exercitation sit in laborum cillum qui. Dolore voluptate commodo adipisicing anim id
            voluptate dolore quis aliquip duis duis.[0m
          [36m</p>[39m
        [36m</span>[39m
        [36m<span[39m
          [33maria-labelledby[39m=[32m"s0-@base-0-4-tourtip-label"[39m
          [33mclass[39m=[32m"tourtip__overlay"[39m
          [33mid[39m=[32m"s0-overlay"[39m
          [33mrole[39m=[32m"region"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"tourtip__pointer"[39m
          [36m/>[39m
          [36m<span[39m
            [33mclass[39m=[32m"tourtip__mask"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"tourtip__cell"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"tourtip__content"[39m
              [36m>[39m
                [36m<h2[39m
                  [33mclass[39m=[32m"tourtip__heading"[39m
                  [33mid[39m=[32m"s0-@base-0-4-tourtip-label"[39m
                [36m>[39m
                  [0mImportant[0m
                [36m</h2>[39m
                [36m<p>[39m
                  [0mThis new feature was added.[0m
                [36m</p>[39m
              [36m</span>[39m
              [36m<button[39m
                [33maria-label[39m=[32m"close"[39m
                [33mclass[39m=[32m"icon-btn icon-btn--transparent tourtip__close"[39m
                [33mtype[39m=[32m"button"[39m
              [36m>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mclass[39m=[32m"icon icon--16"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-close-16"[39m
                      [33mviewBox[39m=[32m"0 0 16 16"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                      [36m/>[39m
                    [36m</symbol>[39m
                  [36m</defs>[39m
                  [36m<use[39m
                    [33mhref[39m=[32m"#icon-close-16"[39m
                  [36m/>[39m
                [36m</svg>[39m
              [36m</button>[39m
            [36m</span>[39m
          [36m</span>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`tourtip > renders tourtip closed 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span>[39m
    [36m<span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"tourtip"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"tourtip__host"[39m
        [36m>[39m
          [36m<p>[39m
            [0mNisi quis officia cupidatat irure qui aliquip mollit aliqua dolore. Sint ut anim adipisicing
            eiusmod. Dolor irure adipisicing dolor ullamco elit irure laboris consectetur eiusmod et officia
            mollit irure. Reprehenderit nostrud proident anim deserunt aliqua proident dolore reprehenderit.
            Proident fugiat sit nostrud Lorem aliquip enim est sint. Labore esse quis nulla in Lorem aute
            duis exercitation sit in laborum cillum qui. Dolore voluptate commodo adipisicing anim id
            voluptate dolore quis aliquip duis duis.[0m
          [36m</p>[39m
        [36m</span>[39m
        [36m<span[39m
          [33maria-labelledby[39m=[32m"s0-@base-0-4-tourtip-label"[39m
          [33mclass[39m=[32m"tourtip__overlay"[39m
          [33mid[39m=[32m"s0-overlay"[39m
          [33mrole[39m=[32m"region"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"tourtip__pointer"[39m
          [36m/>[39m
          [36m<span[39m
            [33mclass[39m=[32m"tourtip__mask"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"tourtip__cell"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"tourtip__content"[39m
              [36m>[39m
                [36m<h2[39m
                  [33mclass[39m=[32m"tourtip__heading"[39m
                  [33mid[39m=[32m"s0-@base-0-4-tourtip-label"[39m
                [36m>[39m
                  [0mImportant[0m
                [36m</h2>[39m
                [36m<p>[39m
                  [0mThis new feature was added.[0m
                [36m</p>[39m
              [36m</span>[39m
              [36m<button[39m
                [33maria-label[39m=[32m"close"[39m
                [33mclass[39m=[32m"icon-btn icon-btn--transparent tourtip__close"[39m
                [33mtype[39m=[32m"button"[39m
              [36m>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mclass[39m=[32m"icon icon--16"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-close-16"[39m
                      [33mviewBox[39m=[32m"0 0 16 16"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                      [36m/>[39m
                    [36m</symbol>[39m
                  [36m</defs>[39m
                  [36m<use[39m
                    [33mhref[39m=[32m"#icon-close-16"[39m
                  [36m/>[39m
                [36m</svg>[39m
              [36m</button>[39m
            [36m</span>[39m
          [36m</span>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`tourtip > renders with footer 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span>[39m
    [36m<span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"tourtip tourtip--expanded"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"tourtip__host"[39m
        [36m>[39m
          [36m<p>[39m
            [0mNisi quis officia cupidatat irure qui aliquip mollit aliqua dolore. Sint ut anim adipisicing
            eiusmod. Dolor irure adipisicing dolor ullamco elit irure laboris consectetur eiusmod et officia
            mollit irure. Reprehenderit nostrud proident anim deserunt aliqua proident dolore reprehenderit.
            Proident fugiat sit nostrud Lorem aliquip enim est sint. Labore esse quis nulla in Lorem aute
            duis exercitation sit in laborum cillum qui. Dolore voluptate commodo adipisicing anim id
            voluptate dolore quis aliquip duis duis.[0m
          [36m</p>[39m
        [36m</span>[39m
        [36m<span[39m
          [33maria-labelledby[39m=[32m"s0-@base-0-4-tourtip-label"[39m
          [33mclass[39m=[32m"tourtip__overlay"[39m
          [33mid[39m=[32m"s0-overlay"[39m
          [33mrole[39m=[32m"region"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"tourtip__pointer"[39m
          [36m/>[39m
          [36m<span[39m
            [33mclass[39m=[32m"tourtip__mask"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"tourtip__cell"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"tourtip__content"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"tourtip__heading"[39m
                  [33mid[39m=[32m"s0-@base-0-4-tourtip-label"[39m
                [36m>[39m
                  [0mImportant[0m
                [36m</span>[39m
                [36m<p>[39m
                  [0mThis new feature was added.[0m
                [36m</p>[39m
              [36m</span>[39m
              [36m<button[39m
                [33maria-label[39m=[32m"close"[39m
                [33mclass[39m=[32m"icon-btn icon-btn--transparent tourtip__close"[39m
                [33mtype[39m=[32m"button"[39m
              [36m>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mclass[39m=[32m"icon icon--16"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-close-16"[39m
                      [33mviewBox[39m=[32m"0 0 16 16"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                      [36m/>[39m
                    [36m</symbol>[39m
                  [36m</defs>[39m
                  [36m<use[39m
                    [33mhref[39m=[32m"#icon-close-16"[39m
                  [36m/>[39m
                [36m</svg>[39m
              [36m</button>[39m
              [36m<span[39m
                [33mclass[39m=[32m"tourtip__footer"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"tourtip__index"[39m
                [36m>[39m
                  [0m1 of 3[0m
                [36m</span>[39m
                [36m<button[39m
                  [33mclass[39m=[32m"fake-link"[39m
                [36m>[39m
                  [0mBack[0m
                [36m</button>[39m
                [36m<button[39m
                  [33mclass[39m=[32m"btn btn--primary"[39m
                [36m>[39m
                  [0mNext[0m
                [36m</button>[39m
              [36m</span>[39m
            [36m</span>[39m
          [36m</span>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;
